--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
                 </div>
                 <img src="./assets/images/kosovo.jpg" class="img-responsive" />
             </section>
-            <div class="spacer"></div>
             <section id="ftleavenworth">
                 <span class="sect-title">
                     Curriculum Instructor
@@ -280,7 +279,6 @@
                     </li>
                 </ul>
             </section>
-            <div class="spacer"></div>
             <section id="highlandsranch">
                 <span class="sect-title">
                     Law Enforcement Analyst
@@ -475,6 +473,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'centriq',
                             description:
                                 '<span class="sect-title">Centriq Training Career Program</span><p>Full-Stack Web Developer Track</p><p>Solid foundation of designing and developing full-stack web applications using .NET framework.</p>'
                         },
@@ -486,6 +485,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'kosovo',
                             description:
                                 '<span class="sect-title">US Army, 504th BfSB</span><p>Supported the Brigade Commander’s Priority Intelligence Requirements through Military Source Operations and Strategic Debriefing. Led and mentored a 4-person team in daily operations to include: pre-mission planning, operations, reporting, record keeping, and leadership briefing. Communicated effectively with multiple non-Native English speakers from varying backgrounds and cultures. Successfully communicated using a translator for some non-English speaking audiences.</p>'
                         },
@@ -497,6 +497,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'opks_bv',
                             description:
                                 '<span class="sect-title">Black & Veatch</span><p>Key Achievements: <ul class="list-group"><li class="list-group-item">Introduced key efficiencies in data management by migrating data from stand-alone file systems to full SQL DB, reduced the opportunity for production errors and increased data sharing.</li><li class="list-group-item">Implemented and modified data schema for multiple new data-sets and integrated new data-sets with other key industry standard data schemas.</li></ul></p>'
                         },
@@ -508,6 +509,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'highlandsranch',
                             description:
                                 '<span class="sect-title">Bair Analytics</span><p>Provided client support for law enforcement mapping service. Created SQL translations from client’s RMS schema to internal schema. Trained clients to use software and web-based products. Conducted advanced GIS analysis for select clients.</p>'
                         },
@@ -519,6 +521,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'denton',
                             description:
                                 '<span class="sect-title">University of North Texas</span><h3>Bachelor of Science, Geography</h3><p>Minor in English Literature. Focused on urban and human geography.</p>'
                         },
@@ -530,6 +533,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'kabul',
                             description:
                                 '<span class="sect-title">Human Terrain Systems</span><p>Coordinated research from 20+ teams for a military program based in Afghanistan. Created geospatial intelligence products from research materials. Coordinated requests for surveys between Social Science directorate and field teams.</p>'
                         },
@@ -541,6 +545,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'macdill',
                             description:
                                 '<span class="sect-title">Courage Services, INC</span><p>Created written reports for various Intelligence Preparation of the Battlefield products for SOCOM personnel. Conducted in-depth research and analysis of specific regions throughout the world. Created spatial data-sets for analysis by proprietary software tools.</p>'
                         },
@@ -552,6 +557,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'dallas',
                             description:
                                 '<span class="sect-title">Dallas Police Department</span><p>Served as patrol officer, bicycle officer, crime analyst, analyst detective, field training officer. Developed GIS methods to identify critical need areas for police services and track changes in those areas. Used SQL and data management skills to improve analysis capabilities.</p>'
                         },
@@ -563,6 +569,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'paris',
                             description:
                                 '<span class="sect-title">French Language Skills</span><p>Demonstrated desire to continue learning and discipline to acquire skills. Aussi, les pain au chocolat sont excellent.</p>'
                         },
@@ -574,6 +581,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'ftleavenworth',
                             description:
                                 '<span class="sect-title">CGI Federal</span><p>Trained Research Managers for the Human Terrain System. Developed and taught GIS-based courses for adult learners using the ADDIE methodology. Successfully communicated very technical subject matter to non-technical audience of learners.</p>'
                         },
@@ -585,6 +593,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'kuwait-city',
                             description:
                                 '<span class="sect-title">US Army, 35th Infantry Division</span><p>Served as the Subject Matter Expert for all matters related to Human Intelligence Collection and Counter-Intelligence for the Division Commander. Coordinated the day-to-day operations, including planning, operational control, and reporting. Mentored subordinates and provided quality assurance for all products.</p>'
                         },
@@ -596,6 +605,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'opks_dea',
                             description:
                                 '<span class="sect-title">Missouri Army National Guard</span><p>Supported federal criminal investigations through data mining and research of individuals. Created maps, link analysis charts, event-timeline products, and written reports in support of criminal prosecutions.Used Cellebrite products to collect cell phone evidence.</p>'
                         },
@@ -607,6 +617,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'esri',
                             description:
                                 '<span class="sect-title">ESRI</span><h3>ArcGIS Server Administrator</h3><p>Installation and administration of ArcGIS Server.</p>'
                         },
@@ -618,6 +629,7 @@
                     {
                         type: 'Feature',
                         properties: {
+                            location: 'kansas-city',
                             description:
                                 '<span class="sect-title">Contact Info</span><p><ul class="list-group"><li class="list-group-item"><span class="label">Email</span><span class="data"><a href="mailto:chad@codingbychad.com">chad@codingbychad.com</a></span></li><li class="list-group-item"><span class="label">Phone</span><span class="data">(719) 839-1071</span></li><li class="list-group-item"><span class="label">LinkedIn Profile</span><span class="data"><a href="https://www.linkedin.com/in/chadesmith" target="_blank">Chad Smith</a></span></li><li class="list-group-item"><span class="label">GitHub Profile</span><span class="data"><a href="https://github.com/ChadESmitdiv2" target="_blank">ChadESmith</a></span></li></ul></p>'
                         },
@@ -637,7 +649,10 @@
             {
                 var coordinates = e.features[0].geometry.coordinates.slice();
                 var description = e.features[0].properties.description;
-
+                console.log('Event ', e);
+                var pageLocation = document.getElementById(e.features[0].properties.location);
+                console.log('My argument: ', pageLocation);
+                pageLocation.scrollIntoView(true);
                 while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
                     coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
                 }
@@ -785,7 +800,7 @@
                     var chapterName = chapterNames[i];
                     if (isElementOnScreen(chapterName)) {
                         setActiveChapter(chapterName);
-                        break;
+                        return;
                     }
                 }
             };
@@ -816,7 +831,7 @@
                     document.documentElement.clientHeight,
                     window.innerHeight
                 );
-                return !(bounds.bottom < 0 || bounds.top - viewHeight >= 0);
+                return !(bounds.bottom < 0 || bounds.top - viewHeight >= 20);
             }
         </script>
     </body>
