ADD: postman icon

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,9 @@
                   <img src="./assets/icons/nodejs.png" class="avatar" alt="Node JS" />
                 </span>
                 <span class="technology-item">
+                  <img src="./assets/icons/postman-logo.png" class="avatar" alt="Postman" />
+                </span>
+                <span class="technology-item">
                   <img src="./assets/icons/restful_api.png" class="avatar" alt="REST APIs" />
                 </span>
 
