ADD: more tech icons

--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
                   <img src="./assets/icons/NPM.png" class="avatar" alt="NPM JS" />
                 </span>
                 <span class="technology-item">
+                  <img src="./assets/icons/Microsoft-Teams-Logo.png" class="avatar" alt="Microsoft Teams" />
+                </span>
+                <span class="technology-item">
+                  <img src="./assets/icons/slack-logo.jpeg" class="avatar" alt="Slack" />
+                </span>
+                <span class="technology-item">
+                  <img src="./assets/icons/mac-os.png" class="avatar" alt="Mac OS" />
+                </span>
+                <span class="technology-item">
+                  <img src="./assets/icons/windows-logo.png" class="avatar" alt="Windows OS" />
+                </span>
+                <span class="technology-item">
                   <img src="./assets/icons/vs_code.png" class="avatar" alt="VS Code" />
                 </span>
                 <span class="technology-item">
