REFACTOR: update image file and reference

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       </section>
       <section id="quest">
         <span class="sect-title">Software Engineer
-          <img src="./assets/images/quest-analytics.jpg" class="avatar" />
+          <img src="./assets/images/quest-analytics.png" class="avatar" />
         </span>
         <div>Quest Analytics, LLC</div>
         <div>September 2022 to Present</div>
