UPDATE work history and description

--- a/index.html
+++ b/index.html
@@ -259,12 +259,45 @@
         </p>
         <img class="img-responsive" src="./assets/images/social-block-untsocial.jpg" alt=""/>
       </section>
+      <section id="cardinal">
+        <span class="sect-title">Staff Software Engineer
+          <img src="./assets/images/cardinal-health-logo.jpeg" class="avatar" alt="Cardinal Health logo" />
+        </span>
+        <div>Cardinal Health - Sonexus</div>
+        <div>February 2022 to September 2022, March 2024 to present</div>
+        <p>
+          Supported the full software development lifecycle for multiple customer-facing applications in the Specialty Pharmacy area.
+        </p>
+        <ul class="list-group">
+          <li class="list-group-item">Acted as Lead UI Engineer for several products under the SETH program</li>
+          <li class="list-group-item">Lead a team of 3 UI developers for the Patient Scheduling product. The app is driven by an orchestration
+            service using Web Socket messaging. The app is completely configurable for which pages are shown, what order they are displayed, and 
+            which users are allowed to see those pages.
+          </li>
+          <li class="list-group-item">
+            Integrated FHIR Questioninaire Model into a Questionnaire Service. Created an Questionnaire Management application to create, clone, or
+            edit Questionnaires to be consumed in other applications. Collaborated on an Angular Library to display the Questionnaires using Dynamic Forms. The Questionnaire
+            model allows future form-heavy applications, which need to be customized for each client, to be generated less software engineer intervention. It reduces 
+            the customization to a configuration issue rather than a development inssue.
+          </li>
+          <li class="list-group-item">
+            Mentored two junior developers in professional development: presenting in a business environment, demonstrating application features, code reviews, and 
+            documentation.
+          </li>
+        </ul>
+        <ul class="list-group">
+          <li class="list-group-item">Angular (v12), Typescript, RxJS, Bootstrap, CSS, HTML5</li>
+          <li class="list-group-item">C#, ASP.NET, .Net Core, Microsoft SQL Server</li>
+          <li class="list-group-item">Azure DevOps, Git, CI/CD, Agile</li>
+          <li class="list-group-item">Unit Testing, Jasmine, Karma</li>
+        </ul>
+      </section>
       <section id="quest">
         <span class="sect-title">Software Engineer
           <img src="./assets/images/quest-analytics.png" class="avatar" alt="Quest Analytics logo"/>
         </span>
         <div>Quest Analytics, LLC</div>
-        <div>September 2022 to Present</div>
+        <div>September 2022 to February 2023</div>
         <p>
           Supported the full software development lifecycle for multiple .Net microservices and core platform applications.
         </p>
@@ -273,22 +306,6 @@
           <li class="list-group-item">C#, ASP.Net, .Net Core, Microsoft SQL Server, Redis, SEQ, MongoDb</li>
           <li class="list-group-item">Azure DevOps, Azure CLI, Docker, Git, CI/CD, Agile</li>
           <li class="list-group-item">Unit Testing, XUnit</li>
-        </ul>
-      </section>
-      <section id="cardinal">
-        <span class="sect-title">Staff Software Engineer
-          <img src="./assets/images/cardinal-health-logo.jpeg" class="avatar" alt="Cardinal Health logo" />
-        </span>
-        <div>Cardinal Health - Sonexus</div>
-        <div>February 2022 to September 2022</div>
-        <p>
-          Supported the full software development lifecycle for multiple customer-facing applications in the Specialty Pharmacy area.
-        </p>
-        <ul class="list-group">
-          <li class="list-group-item">Angular (v12), Typescript, RxJS, Bootstrap, CSS, HTML5</li>
-          <li class="list-group-item">C#, ASP.NET, .Net Core, Microsoft SQL Server</li>
-          <li class="list-group-item">Azure DevOps, Git, CI/CD, Agile</li>
-          <li class="list-group-item">Unit Testing, Jasmine, Karma</li>
         </ul>
       </section>
       <section id="vmlyr">
@@ -697,18 +714,18 @@
           zoom: 13.5,
           pitch: 20,
         },
+        cardinal: {
+          center: [-97.00659124504207, 32.99487248973518],
+          bearing: 0,
+          zoom: 12,
+          pitch: 20
+        },
         quest: {
           center: [-94.6914611, 38.9310843],
           bearing: 0,
           zoom: 12,
           pitch: 20,
           speed: 0.6
-        },
-        cardinal: {
-          center: [-97.00659124504207, 32.99487248973518],
-          bearing: 0,
-          zoom: 12,
-          pitch: 20
         },
         vmlyr: {
           center: [-94.59037705716501, 39.12041138110656],
