FIX typo in GitHub link

--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
             type: 'Feature',
             properties: {
               location: 'kansas-city',
-              description: `<span class="sect-title">Contact Info</span><p><ul class="list-group"><li class="list-group-item"><span class="label">Email</span><span class="data"><a href="mailto:chad@codingbychad.com">chad@codingbychad.com</a></span></li><li class="list-group-item"><span class="label">Phone</span><span class="data">(816) 694-9360</span></li><li class="list-group-item"><span class="label">LinkedIn Profile</span><span class="data"><a href="https://www.linkedin.com/in/chadesmith" target="_blank">Chad Smith</a></span></li><li class="list-group-item"><span class="label">GitHub Profile</span><span class="data"><a href="https://github.com/ChadESmitdiv2" target="_blank">ChadESmith</a></span></li></ul></p>`,
+              description: `<span class="sect-title">Contact Info</span><p><ul class="list-group"><li class="list-group-item"><span class="label">Email</span><span class="data"><a href="mailto:chad@codingbychad.com">chad@codingbychad.com</a></span></li><li class="list-group-item"><span class="label">Phone</span><span class="data">(816) 694-9360</span></li><li class="list-group-item"><span class="label">LinkedIn Profile</span><span class="data"><a href="https://www.linkedin.com/in/chadesmith" target="_blank">Chad Smith</a></span></li><li class="list-group-item"><span class="label">GitHub Profile</span><span class="data"><a href="https://github.com/ChadESmith42" target="_blank">ChadESmith</a></span></li></ul></p>`,
             },
             geometry: {
               type: 'Point',
